Migrated broadcast worker and their sib1 test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -142,15 +142,15 @@
             "program": "${workspaceFolder}/build/shadower/comp/ssb/ssb_test",
             "args": [
                 "-s",
-                "46.08",
+                "23.04",
                 "-f",
                 "3427.5",
                 "-b",
-                "3413.28",
-                "-F",
-                "${workspaceFolder}/shadower/test/data/srsran-n78-40MHz/sib.fc32",
+                "3421.92",
                 "-I",
-                "1"
+                "1",
+                "-F",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/sib.fc32",
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -178,6 +178,35 @@
                 "${workspaceFolder}/shadower/test/data/srsran-n78-40MHz/sib.fc32",
                 "-I",
                 "1"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+        },
+        {
+            "name": "broadcast_worker_sib1_test",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/comp/workers/broadcast_worker_sib1_test",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "3427.5",
+                "-b",
+                "3421.92",
+                "-I",
+                "1",
+                "-i",
+                "0",
+                "-p",
+                "51",
+                "-F",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/sib.fc32",
+                "-m",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/mib.raw"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
