--- a/shadower/comp/ssb/CMakeLists.txt
+++ b/shadower/comp/ssb/CMakeLists.txt
@@ -6,7 +6,7 @@ if(USE_CUDA)
 endif(USE_CUDA)
 
 add_executable(ssb_test tests/ssb_test.cc)
-target_link_libraries(ssb_test utils ssb_utils)
+target_link_libraries(ssb_test utils)
 if(USE_CUDA)
     target_link_libraries(ssb_test ssb_cuda)
 endif(USE_CUDA)
