--- a/shadower/test/CMakeLists.txt
+++ b/shadower/test/CMakeLists.txt
@@ -3,33 +3,15 @@ set(TestCommonSources ${SHADOWER_DIR}/utils.cc ${SHADOWER_DIR}/trace_samples.cc)
 add_executable(source_test source_test.cc ${TestCommonSources})
 target_link_libraries(source_test ${SRSUE_SOURCES} ${SRSRAN_SOURCES})
 
-add_executable(cell_search_test cell_search_test.cc ${TestCommonSources})
-target_link_libraries(cell_search_test ${SRSUE_SOURCES} ${SRSRAN_SOURCES})
-if (USE_CUDA)
+add_executable(cell_search_test cell_search_test.cc)
+target_link_libraries(cell_search_test utils)
+if(USE_CUDA)
   target_link_libraries(cell_search_test ssb_cuda)
 endif(USE_CUDA)
 
-add_executable(search_ssb_freq_test search_ssb_freq_test.cc ${SHADOWER_DIR}/syncer.cc ${TestCommonSources})
-target_link_libraries(search_ssb_freq_test ${SRSUE_SOURCES} ${SRSRAN_SOURCES} Threads::Threads)
-if (USE_CUDA)
-  target_link_libraries(search_ssb_freq_test ssb_cuda)
-endif(USE_CUDA)
-
-add_executable(ssb_frequency_correction ssb_frequency_correction.cc ${TestCommonSources})
-target_link_libraries(ssb_frequency_correction ${SRSUE_SOURCES} ${SRSRAN_SOURCES} Threads::Threads)
-if (USE_CUDA)
-  target_link_libraries(search_ssb_freq_test ssb_cuda)
-endif(USE_CUDA)
-
-add_executable(syncer_test syncer_test.cc ${TestCommonSources} ${SHADOWER_DIR}/syncer.cc)
-target_link_libraries(syncer_test ${SRSUE_SOURCES} ${SRSRAN_SOURCES} zmq)
-if (USE_CUDA)
-  target_link_libraries(syncer_test ssb_cuda)
-endif(USE_CUDA)
-
-add_executable(sib_search_test sib_search_test.cc ${TestCommonSources})
-target_link_libraries(sib_search_test ${SRSUE_SOURCES} ${SRSRAN_SOURCES})
-if (USE_CUDA)
+add_executable(sib_search_test sib_search_test.cc)
+target_link_libraries(sib_search_test utils)
+if(USE_CUDA)
   target_link_libraries(sib_search_test fft_processor)
 endif(USE_CUDA)
 
