Update the test for rar

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -214,5 +214,40 @@
             "externalConsole": false,
             "MIMode": "gdb",
         },
+        {
+            "name": "broadcast_worker_rar_test",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/comp/workers/broadcast_worker_rar_test",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "3427.5",
+                "-b",
+                "3421.92",
+                "-I",
+                "1",
+                "-i",
+                "10",
+                "-R",
+                "267",
+                "-p",
+                "51",
+                "-m",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/mib.raw",
+                "-F",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/rar.fc32",
+                "-z",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/sib1.raw",
+                "-Z",
+                "101"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+        },
     ]
 }
