Migrate ue_dl_worker and their test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -249,5 +249,46 @@
             "externalConsole": false,
             "MIMode": "gdb",
         },
+        {
+            "name": "ue_dl_worker_test",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/comp/workers/ue_dl_worker_test",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "3427.5",
+                "-b",
+                "3421.92",
+                "-c",
+                "1",
+                "-R",
+                "17921",
+                "-i",
+                "4",
+                "-I",
+                "1",
+                "-p",
+                "51",
+                "-m",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/mib.raw",
+                "-z",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/sib1.raw",
+                "-Z",
+                "101",
+                "-y",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/rrc_setup.raw",
+                "-Y",
+                "316",
+                "-F",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/pdsch_3684.fc32",
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+        },
     ]
 }
