Migrate gnb_ul_worker test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -265,8 +265,6 @@
                 "1",
                 "-R",
                 "17921",
-                "-i",
-                "4",
                 "-I",
                 "1",
                 "-p",
@@ -283,6 +281,57 @@
                 "316",
                 "-F",
                 "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/pdsch_3684.fc32",
+                "-i",
+                "4",
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+        },
+        {
+            "name": "gnb_ul_worker_test",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/comp/workers/gnb_ul_worker_test",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "3427.5",
+                "-b",
+                "3421.92",
+                "-c",
+                "1",
+                "-R",
+                "17921",
+                "-I",
+                "1",
+                "-p",
+                "51",
+                "-m",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/mib.raw",
+                "-z",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/sib1.raw",
+                "-Z",
+                "101",
+                "-y",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/rrc_setup.raw",
+                "-Y",
+                "316",
+                "-d",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/dci_ul_3622.fc32",
+                "-D",
+                "2",
+                "-F",
+                "${workspaceFolder}/shadower/test/data/srsran-n78-20MHz/pusch_3626.fc32",
+                "-i",
+                "6",
+                "-o",
+                "468",
+                "-u",
+                "0.00054"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
