--- a/shadower/utils/CMakeLists.txt
+++ b/shadower/utils/CMakeLists.txt
@@ -3,5 +3,6 @@ add_library(utils
     src/ssb_utils.cc
     src/phy_cfg_utils.cc
     src/ue_dl_utils.cc
+    src/gnb_ul_utils.cc
 )
 target_link_libraries(utils ${SRSUE_SOURCES} ${SRSRAN_SOURCES})
