Migrate gnb_dl_worker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,6 +87,7 @@
         "dlsch",
         "dmrs",
         "gect",
+        "GNBDL",
         "GNBUL",
         "harq",
         "LDPC",
@@ -98,6 +99,7 @@
         "PDCCH",
         "PDCP",
         "pdsch",
+        "prbs",
         "pusch",
         "RACH",
         "recfg",
