Migrate shadower code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,7 @@
         "srslog",
         "srsran",
         "srsue",
+        "syncer",
         "TEST_VARIABLES_H",
         "UEDL",
         "wdissector"
