--- a/configs/config-srsran-n78-20MHz.conf
+++ b/configs/config-srsran-n78-20MHz.conf
@@ -5,57 +5,63 @@ scs_common = 30 # Subcarrier Spacing for common (kHz)
 scs_ssb = 30    # Subcarrier Spacing for SSB (kHz)
 
 [rf]
-freq_offset = 0        # Frequency offset (Hz)
-tx_gain = 80           # Transmit gain (dB)
-rx_gain = 40           # Receive gain (dB)
-dl_arfcn = 628500      # Downlink ARFCN
-ssb_arfcn = 628128     # SSB ARFCN
-sample_rate = 23.04e6  # Sample rate (Hz)
-uplink_cfo_correction = -0.00054  # Uplink CFO (Hz) correction
-ul_sample_offset = 455 #455 # Uplink sample offset
+freq_offset = 0       # Frequency offset (Hz)
+tx_gain = 80          # Transmit gain (dB)
+rx_gain = 40          # Receive gain (dB)
+dl_arfcn = 628500     # Downlink ARFCN
+ssb_arfcn = 628128    # SSB ARFCN
+sample_rate = 23.04e6 # Sample rate (Hz)
+num_channels = 1      # Number of channels
+uplink_cfo = -0.00054 # Uplink CFO (Hz) correction
+
+[worker]
+n_ue_dl_worker = 4    # Number of UE downlink workers
+n_ue_ul_worker = 4    # Number of UE uplink workers
+n_gnb_dl_worker = 4   # Number of gNB downlink workers
+n_gnb_ul_worker = 4   # Number of gNB uplink workers
+close_timeout = 5000  # Close timeout, after how long haven't received a message should stop tracking the UE (ms)
+parse_messages = true # Parse messages
+pool_size = 20        # Worker pool size
+num_ues = 12          # Number of UETrackers to pre-initialize
+enable_gpu = false
+
+[injector]
+delay_n_slots = 6     # Number of slots to delay injecting the message
+duplications = 4      # Number of duplications to send in each inject
+tx_cfo_correction = 0 # Uplink CFO correction (Hz)
+tx_advancement = 166  # Number of samples to send in advance
+pdsch_mcs = 3         # PDSCH MCS
+pdsch_prbs = 24       # PDSCH PRBs
+
+[source]
+source_type = uhd                               # Source type: file, limesdr, uhd
+source_srate = 23.04e6                          # Sample rate for SDR source
+source_module = build/shadower/libuhd_source.so # Source module path
+source_params = type=b200,serial=3218CC4        # Device arguments for SDR source
+
+# [source]
+# source_type = file                               # Source type: file, limesdr, uhd
+# source_srate = 23.04e6                           # Sample rate for SDR source
+# source_module = build/shadower/libfile_source.so # Source module path
+# source_params = /root/records/uhd.fc32           # Device arguments for SDR source
+
+# [source]
+# source_type = uhd                                   # Source type: file, limesdr, uhd
+# source_srate = 23.04e6                              # Sample rate for SDR source
+# source_module = build/shadower/liblimesdr_source.so # Source module path
+# source_params = logLevel:3,dev0:XTRX,chipIndex:0,channels:1,linkFormat:I12,rx_path:LNAH,tx_path:Band1,calibration:none,freq_corr:34000,tx_enabled:0
 
 [recorder]
 enable_recorder = false
-recorder_file = /tmp/output.fc32 # Recording output file
-
-[task]
-slots_to_delay = 6         # Number of slots to delay injecting the message
-max_flooding_epoch = 4     # Number of duplications to send in each inject
-tx_cfo_correction = 0      # Uplink CFO correction (Hz)
-send_advance_samples = 166 # Number of samples to send in advance
-n_ue_dl_worker = 4         # Number of UE downlink workers
-n_ue_ul_worker = 4         # Number of UE uplink workers
-n_gnb_dl_worker = 4        # Number of gNB downlink workers
-n_gnb_ul_worker = 4        # Number of gNB uplink workers
-pdsch_mcs = 3              # PDSCH MCS
-pdsch_prbs = 24            # PDSCH PRBs
-close_timeout = 5000       # Close timeout, after how long haven't received a message should stop tracking the UE (ms)
-
-
-[source]
-source_type = uhd # Source type: file, limesdr, uhd
-source_module = build/shadower/libuhd_source.so
-source_params = type=b200,serial=3218CC4        # Device arguments for SDR source
-# source_type = file # Source type: file, limesdr, uhd
-# source_module = build/shadower/libfile_source.so
-# source_params = /root/records/uhd.fc32        # Device arguments for SDR source
-#source_type = limesdr # Source type: file, limesdr, uhd
-#source_module = build/shadower/liblimesdr_source.so
-#source_params = logLevel:3,dev0:XTRX,chipIndex:0,channels:1,linkFormat:I12,rx_path:LNAH,tx_path:Band1,calibration:none,freq_corr:34000,tx_enabled:0
 
 [log]
-log_level = INFO           # General log level
-syncer_log_level = INFO    # Syncer log level
-worker_log_level = INFO    # Worker log level
-bc_worker_log_level = INFO # Broadcast worker log level
+log_level = INFO # General log level
+syncer = INFO    # Syncer log level
+worker = INFO    # Worker log level
+bc_worker = INFO # Broadcast worker log level
 
 [pcap]
 pcap_folder = logs/ # Pcap folder
-
-[worker]
-pool_size = 20 # Worker pool size
-num_ues = 12   # Number of UETrackers to pre-initialize
-enable_gpu_acceleration = false
 
 [exploit]
 module = modules/lib_dummy.so
