--- a/configs/config-srsran-n78-20MHz.conf
+++ b/configs/config-srsran-n78-20MHz.conf
@@ -64,14 +64,14 @@ bc_worker = INFO # Broadcast worker log level
 pcap_folder = logs/ # Pcap folder
 
 [exploit]
-module = modules/lib_dummy.so
-# module = modules/lib_identity_request.so
-# module = modules/lib_dg_authentication_request_sniffer.so
-# module = modules/lib_dg_authentication_replay.so
-# module = modules/lib_dg_registration_reject.so
-# module = modules/lib_mac_sch_mtk_rlc_crash.so
-# module = modules/lib_mac_sch_mtk_rrc_setup_crash_3.so
-# module = modules/lib_mac_sch_mtk_rrc_setup_crash_4.so
-# module = modules/lib_mac_sch_mtk_rrc_setup_crash_6.so
-# module = modules/lib_mac_sch_mtk_rrc_setup_crash_7.so
-# module = modules/lib_plaintext_registration_accept.so
+module = build/modules/lib_dummy_exploit.so
+# module = build/modules/lib_identity_request.so
+# module = build/modules/lib_dg_authentication_request_sniffer.so
+# module = build/modules/lib_dg_authentication_replay.so
+# module = build/modules/lib_dg_registration_reject.so
+# module = build/modules/lib_mac_sch_mtk_rlc_crash.so
+# module = build/modules/lib_mac_sch_mtk_rrc_setup_crash_3.so
+# module = build/modules/lib_mac_sch_mtk_rrc_setup_crash_4.so
+# module = build/modules/lib_mac_sch_mtk_rrc_setup_crash_6.so
+# module = build/modules/lib_mac_sch_mtk_rrc_setup_crash_7.so
+# module = build/modules/lib_plaintext_registration_accept.so
