Migrate resampler and scanner

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -64,6 +64,33 @@
             "MIMode": "gdb",
         },
         {
+            "name": "scanner",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/tools/scanner",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "3420",
+                "-e",
+                "3425",
+                "-S",
+                "30",
+                "-r",
+                "100",
+                "-g",
+                "40",
+                "-d",
+                "type=b200,master_clock_rate=23.04e6"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+        },
+        {
             "name": "cutter",
             "type": "cppdbg",
             "request": "launch",
