--- a/shadower/tools/CMakeLists.txt
+++ b/shadower/tools/CMakeLists.txt
@@ -2,3 +2,9 @@ add_executable(recorder ${SHADOWER_DIR}/tools/recorder.cc ${SHADOWER_DIR}/source
 target_link_libraries(recorder pthread liquid)
 
 add_executable(cutter ${SHADOWER_DIR}/tools/cutter.cc)
+
+add_executable(resampler ${SHADOWER_DIR}/tools/resampler.cc)
+target_link_libraries(resampler liquid)
+
+add_executable(scanner ${SHADOWER_DIR}/tools/scanner.cc)
+target_link_libraries(scanner utils source)
