--- a/shadower/tools/CMakeLists.txt
+++ b/shadower/tools/CMakeLists.txt
@@ -8,3 +8,6 @@ target_link_libraries(resampler liquid)
 
 add_executable(scanner ${SHADOWER_DIR}/tools/scanner.cc)
 target_link_libraries(scanner utils source)
+
+add_executable(pcap_writer ${SHADOWER_DIR}/tools/pcap_writer.cc)
+target_link_libraries(pcap_writer utils)
